--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "repository": "https://github.com/rafaelgeronimo/clone-tabnews",
-  "author": "Rafael Gerônimo <rafaelgeronimo@outlook.com>",
+  "author": "Rafael Gerônimo <rafael@geronimo.dev>",
   "license": "MIT",
   "dependencies": {
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0"
   }
 }
