--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watchAll"
   },
   "repository": "https://github.com/rafaelgeronimo/clone-tabnews",
   "author": "Rafael Gerônimo <rafael@geronimo.dev>",
